[tool.poetry]
name = "projet-sc"
version = "0.1.0"
description = ""
authors = ["alisoncha <alison.cha26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
